Plugins/iOS/ImSDK_iOS_C.xcframework/ios-arm64_armv7/ImSDK_iOS_C.framework/Headers/TIMCloudCallback.h

/**
* @brief 日志回调
*
* @param level 日志级别,请参考[TIMLogLevel](TIMCloudDef.h)
* @param log 日志字符串
* @param user_data ImSDK负责透传的用户自定义数据，未做任何处理
*/
typedef void (*TIMLogCallback)(enum TIMLogLevel level, const char* log, const void* user_data);
/**
* @brief 实验性通知的回调（7.4 及其以上版本支持）
*
* @param key 通知 key
* @param data 通知数据
*/
typedef void (*TIMExperimentalNotifyCallback)(const char* key, const char* data, const void* user_data);