Assets/TencentIMSDK/Plugins/iOS/ImSDK_iOS_C.xcframework/ios-arm64_armv7/ImSDK_iOS_C.framework/Headers/TIMCommunityManager.h

/////////////////////////////////////////////////////////////////////////////////
//
//                         二. 社群事件回调定义
//
/////////////////////////////////////////////////////////////////////////////////
/**
 * 2.1 话题创建的回调
 *
 * @param group_id 话题所属的社群 ID
 * @param topic_id 话题 ID
 * @param user_data ImSDK负责透传的用户自定义数据，未做任何处理
 */
typedef void (*TIMCommunityCreateTopicCallback)(const char* group_id, const char* topic_id, const void* user_data);
/**
 * 2.2 话题被删除的回调
 *
 * @param group_id 话题所属的社群 ID
 * @param topic_id_array 话题列表
 * @param user_data ImSDK负责透传的用户自定义数据，未做任何处理
 */
typedef void (*TIMCommunityDeleteTopicCallback)(const char* group_id, const char* topic_id_array, const void* user_data);
/**
 * 2.3 话题更新的回调
 *
 * @param group_id 话题所属的社群 ID
 * @param topic_info 话题信息，参见 @ref TIMGroupTopicInfo 类型
 * @param user_data ImSDK负责透传的用户自定义数据，未做任何处理
 */
typedef void (*TIMCommunityChangeTopicInfoCallback)(const char* group_id, const char* topic_info, const void* user_data);
/**
 * 2.4 话题自定义系统通知
 *
 * @param group_id 话题所属的社群 ID
 * @param custom_data 自定义的通知信息
 * @param user_data ImSDK负责透传的用户自定义数据，未做任何处理
 */
typedef void (*TIMCommunityReceiveTopicRESTCustomDataCallback)(const char* topic_id, const char* custom_data, const void* user_data);
/**
 * 2.5 权限组创建的回调
 * 
 * @param group_id 权限组所属的社群 ID
 * @param permission_group_info 权限组信息，Json Key 请参考 @ref PermissionGroupInfo
 * @param user_data ImSDK负责透传的用户自定义数据，未做任何处理
 */
typedef void (*TIMCommunityCreatePermissionGroupCallback)(const char* group_id, const char* permission_group_info, const void* user_data);
/**
 * 2.6 权限组删除的回调
 * 
 * @param group_id 权限组所属的社群 ID
 * @param permission_group_id_array 权限组 ID 列表
 * @param user_data ImSDK负责透传的用户自定义数据，未做任何处理
 */
typedef void (*TIMCommunityDeletePermissionGroupCallback)(const char* group_id, const char* permission_group_id_array, const void* user_data);
/**
 * 2.7 权限组更新的回调
 * 
 * @param group_id 权限组所属的社群 ID
 * @param permission_group_info 权限组信息，Json Key 请参考 @ref PermissionGroupInfo
 * @param user_data ImSDK负责透传的用户自定义数据，未做任何处理
 */
typedef void (*TIMCommunityChangePermissionGroupInfoCallback)(const char* group_id, const char* permission_group_info, const void* user_data);
/**
 * 2.8 添加成员到权限组中
 * 
 * @param group_id 权限组所属的社群 ID
 * @param json_result 权限组 ID 以及 向该权限组中添加的用户 ID 列表，Json Key 请参考 @ref PermissionGroupCallback
 * @param user_data ImSDK负责透传的用户自定义数据，未做任何处理
 */
typedef void (*TIMCommunityAddMembersToPermissionGroupCallback)(const char* group_id, const char* json_result, const void* user_data);
/**
 * 2.9 从权限组中删除成员
 * 
 * @param group_id 权限组所属的社群 ID
 * @param json_result 权限组 ID 以及 从该权限组中删除的用户 ID 列表，Json Key 请参考 @ref PermissionGroupCallback
 * @param user_data ImSDK负责透传的用户自定义数据，未做任何处理
 */
typedef void (*TIMCommunityRemoveMembersFromPermissionGroupCallback)(const char* group_id, const char* json_result, const void* user_data);
/**
 * 2.10 话题权限添加的回调
 * 
 * @param group_id 权限组所属的社群 ID
 * @param json_result 权限组 ID 以及 向该权限组中添加的话题权限信息，Json Key 请参考 @ref PermissionGroupCallback
 * @param user_data ImSDK负责透传的用户自定义数据，未做任何处理
 */
typedef void (*TIMCommunityAddTopicPermissionCallback)(const char* group_id, const char* json_result, const void* user_data);
/**
 * 2.11 话题权限删除的回调
 * 
 * @param group_id 权限组所属的社群 ID
 * @param json_result  权限组 ID 以及 从该权限组中删除的话题 ID 列表，Json Key 请参考 @ref PermissionGroupCallback
 * @param user_data ImSDK负责透传的用户自定义数据，未做任何处理
 */
typedef void (*TIMCommunityDeleteTopicPermissionCallback)(const char* group_id, const char* json_result, const void* user_data);
/**
 * 2.12 话题权限修改的回调
 * 
 * @param group_id 权限组所属的社群 ID
 * @param json_result  权限组 ID 以及 该权限组内修改的话题权限列表，Json Key 请参考 @ref TopicPermission
 * @param user_data ImSDK负责透传的用户自定义数据，未做任何处理
 */
typedef void (*TIMCommunityModifyTopicPermissionCallback)(const char* group_id, const char* json_result, const void* user_data);