Assets/TencentIMSDK/Native/NativeSDK.cs


    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMCommunityCreateTopicCallback(IntPtr group_id, IntPtr topic_id, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMCommunityDeleteTopicCallback(IntPtr group_id, IntPtr json_topic_id_array, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMCommunityChangeTopicInfoCallback(IntPtr group_id, IntPtr json_topic_info, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMCommunityReceiveTopicRESTCustomDataCallback(IntPtr topic_id, IntPtr custom_data, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMCommunityCreatePermissionGroupCallback(IntPtr group_id, IntPtr json_permission_group_info, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMCommunityDeletePermissionGroupCallback(IntPtr group_id, IntPtr json_permission_group_id_array, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMCommunityChangePermissionGroupInfoCallback(IntPtr group_id, IntPtr json_permission_group_info, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMCommunityAddMembersToPermissionGroupCallback(IntPtr group_id, IntPtr json_result, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMCommunityRemoveMembersFromPermissionGroupCallback(IntPtr group_id, IntPtr json_result, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMCommunityAddTopicPermissionCallback(IntPtr group_id, IntPtr json_result, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMCommunityDeleteTopicPermissionCallback(IntPtr group_id, IntPtr json_result, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMCommunityModifyTopicPermissionCallback(IntPtr group_id, IntPtr json_result, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMLogCallback(int level, IntPtr log, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void CommonCallback(int code, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMExperimentalNotifyCallback(IntPtr key, IntPtr data, IntPtr user_data);

  }
}